## process this file with automake to produce Makefile.in

if HAVE_AVICLASSES
aviclasses_subdir=aviclasses
endif
if HAVE_AVILIB0_6_10
avilib0_6_10_subdir=avilib-0.6.10
endif

SUBDIRS = $(aviclasses_subdir) $(avilib0_6_10_subdir) src doc
DIST_SUBDIRS = $(aviclasses_subdir) $(avilib0_6_10_subdir) \
	src doc
